Added style.css into the root of the project and amended the build script.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Property Showcase
-Theme URI: http://geminiwave.co.uk/
+Theme Name: My Theme
+Theme URI: http://developerdave.co.uk/
 Author: Dave Green
-Author URI: http://twitter.com/gemini_wave/
+Author URI: http://twitter.com/developerdave/
 Description: A semantic, HTML5, canvas for CSS artists and an ultra-minimal set of super-clean templates for your own WordPress theme development.
 Version: 1.0
 License: GNU General Public License
